--- a/readme
+++ b/readme
@@ -1,13 +1,10 @@
-# js-primerのtodoアプリを自作してみる
-
-## ローカルサーバーでHTMLを確認する
-### todoapp/ディレクトリに移動する
 $ cd todoapp/
 
 ### todoapp/をルートにしたローカルサーバーを起動する
-$ npx --yes @js-primer/local-server
+$ npm run dev
 
 todoappのローカルサーバーを起動しました。
 次のURLをブラウザで開いてください。
 
-URL: http://localhost:3000/public/
+URL: http://localhost:8080/
+
